Extração issues, comentários issues, files commits, pull requests.

--- a/ExtractGitHub/src/main/java/br/edu/ufsm/view/ExtractView.form
+++ b/ExtractGitHub/src/main/java/br/edu/ufsm/view/ExtractView.form
@@ -55,10 +55,62 @@
       <SubComponents>
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Extrair Reposit&#xf3;rio"/>
+            <Property name="text" type="java.lang.String" value="Commit"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JToolBar$Separator" name="jSeparator3">
+        </Component>
+        <Component class="javax.swing.JButton" name="jButton3">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Arquivos Commit"/>
+            <Property name="focusable" type="boolean" value="false"/>
+            <Property name="horizontalTextPosition" type="int" value="0"/>
+            <Property name="verticalTextPosition" type="int" value="3"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JToolBar$Separator" name="jSeparator2">
+        </Component>
+        <Component class="javax.swing.JButton" name="jButton2">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Issue"/>
+            <Property name="focusable" type="boolean" value="false"/>
+            <Property name="horizontalTextPosition" type="int" value="0"/>
+            <Property name="verticalTextPosition" type="int" value="3"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JToolBar$Separator" name="jSeparator1">
+        </Component>
+        <Component class="javax.swing.JButton" name="jButton4">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Issue Coment&#xe1;rios"/>
+            <Property name="focusable" type="boolean" value="false"/>
+            <Property name="horizontalTextPosition" type="int" value="0"/>
+            <Property name="verticalTextPosition" type="int" value="3"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JToolBar$Separator" name="jSeparator4">
+        </Component>
+        <Component class="javax.swing.JButton" name="jButton5">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Pull Request"/>
+            <Property name="focusable" type="boolean" value="false"/>
+            <Property name="horizontalTextPosition" type="int" value="0"/>
+            <Property name="verticalTextPosition" type="int" value="3"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton5ActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
@@ -104,6 +156,9 @@
       </Layout>
       <SubComponents>
         <Component class="javax.swing.JTextField" name="inputUsuario">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="douglasgiordano"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
@@ -116,6 +171,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JPasswordField" name="inputSenha">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="1995panquecas"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
@@ -171,6 +229,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="inputUsuarioProjeto">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="douglasgiordano"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="Nome">
           <Properties>
@@ -178,6 +239,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="inputNomeProjeto">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="extractgithub"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
