Extruturação rede e projedo web atualizado. Extração dos dados também corrigida.

--- a/ExtractGitHub/src/main/java/br/edu/ufsm/view/ExtractView.form
+++ b/ExtractGitHub/src/main/java/br/edu/ufsm/view/ExtractView.form
@@ -113,6 +113,14 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPullRequestActionPerformed"/>
           </Events>
         </Component>
+        <Component class="javax.swing.JButton" name="gerarRedeArquivosUsuario">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Gerar Rede Arquivos - Usu&#xe1;rio"/>
+            <Property name="focusable" type="boolean" value="false"/>
+            <Property name="horizontalTextPosition" type="int" value="0"/>
+            <Property name="verticalTextPosition" type="int" value="3"/>
+          </Properties>
+        </Component>
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="jPanel1">
